crates/efr-render/src/elements/snapshots/efr_render__elements__tests__long_paragraph_w40.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
line one of a long paragraph
line two
line three
line four
line five
line six
