crates/efr-render/src/elements/snapshots/efr_render__elements__tests__quote_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
\e[2m│ \e[0m\e[3mA quote long enough to wrap when the terminal is forty columns wide.\e[0m
\e[2m│\e[0m
\e[2m│ \e[0m\e[3mIts second paragraph.\e[0m
\e[2m│\e[0m
\e[2m│ \e[0m• \e[3ma list inside the quote\e[0m
