crates/efr-render/src/elements/snapshots/efr_render__elements__tests__rule_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
above

\e[2m────────────────────────────────────────────────────────────────────────────────\e[0m

below
