crates/efr-render/src/elements/snapshots/efr_render__elements__tests__table_wide_w40.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
\e[1mOption:\e[0m width
\e[1mMeaning:\e[0m the number of columns text is laid out in

\e[1mOption:\e[0m theme
\e[1mMeaning:\e[0m the syntax theme of code blocks and diffs
